

RELEASE NOTES
=============


2.42.2 - January ??, 2010

    Added a compile_clauses/1 public method, inspired by a predicate with
    a similar name in SWI-Prolog, to the built-in object "logtalk". This
    method is usually called from goal_expansion/2 hooks in order to compile
    auxiliary clauses generated for supporting an expanded goal.

    Added a library object, "meta_compiler", that can be used as an hook
    object to expand calls to the meta-predicates defined in the library
    object "meta" in order to avoid the meta-call overheads.

    Added a protocol, "loggingp", and category and object implementations,
    "logging" and "logger", declaring and defining basic functionality for
    logging events to files to the library.

    Added a protocol, "intervalp", and an object, "interval", declaring and
    defining basic temporal interval relations to the library (based on the
    James F. Allen Interval Algebra work).

    Added a category implementing named integer counters, "counters", to the
    library.

    Added predicates proper_prefix/2 and proper_suffix/2 to the library
    entities "listp", "list", and "difflist".

    Added predicate transpose/2 to the library object "pairs".

    Added support for using the SyntaxHighlighter package (version 3.0.83 or
    later) by Alex Gorbatchev with Logtalk source code.

    Added missing syntax coloring of the else/0 conditional compilation
    directive to the GNU Source-highlight highlighter support.

    Added a note on the Logtalk text editing support available on the free
    MacOS X Kod text editor.


2.42.1 - December 22, 2010

    Added support to the Logtalk compiler for detecting and reporting
    missing dynamic/1 and discontiguous/1 predicate directives.

    Added a new lint flag, "missing_directives", with a default value of
    "warning", to all config files. This flag enables printing of compiler
    warnings for missing dynamic/1, discontiguous/1, and multifile/1 predicate