@@ -20,6 +20,9 @@ RELEASE NOTES
     method is usually called from goal_expansion/2 hooks in order to compile
     auxiliary clauses generated for supporting an expanded goal.
 
+    Updated the SWI-Prolog config file in order to prevent the auto-loading
+    of module libraries when querying predicate properties from Logtalk.
+
     Added a library object, "meta_compiler", that can be used as an hook
     object to expand calls to the meta-predicates defined in the library
     object "meta" in order to avoid the meta-call overheads.
